# DataFusionFrenzy

./: .gitmodules  CMakeLists.txt  LICENSE.md  README.md
.github/workflows/: cmake.yml
benchmark/: CMakeLists.txt  benchmark.cpp
doc/: main.adoc
include/: CMakeLists.txt  book.h  conflation.h  container.h  entry.h
include/dff/: container.h
include/experimental/: thread_pool.hpp  thread_safe_queue.hpp
src/: CMakeLists.txt  conflation.cpp  sample.cpp
tests/: CMakeLists.txt  conflation_tests.cpp
